Initial Firebase Implementation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   sliding_clipped_nav_bar: ^3.1.0+4
+  firebase_auth: ^4.7.1
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
