--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sliding_clipped_nav_bar: ^3.1.0+4
   firebase_auth: ^4.7.1
   firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.3
 
 dev_dependencies:
   flutter_test:
